# zero2prod_rocket

./: Cargo.toml  README.md  Rocket.toml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
